# open-weather-client

./: .gitignore  CMakeLists.txt  Makefile  http_client_sync.cpp  open_weather_client.c
src/: 2  data_parser.cpp  data_parser.hpp  http_client.hpp  main.cpp  utils.hpp
src/atmos/: CMakeLists.txt  atmos.cpp  atmos.hpp  config.hpp  data.cpp  data.hpp  data_parser.cpp  data_parser.hpp  deserialize.hpp  http_client.cpp  http_client.hpp  query_string.cpp  query_string.hpp  reflection.hpp  utils.cpp  utils.hpp
src/atmos_line/: CMakeLists.txt  main.cpp
